--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
     display: flex;
     justify-content: center;
     position: absolute;
-    z-index: 2;
+    z-index: 99999;
 }
 
 .container {
@@ -83,7 +83,7 @@ header nav ul li a:hover {
     display: none;
 }
 
-#close-sidebar{
+#close-sidebar {
     display: none;
 }
 
@@ -113,19 +113,75 @@ header nav ul li a:hover {
     z-index: 1;
 }
 
+.under-slider {
+    margin: -60px auto 0;
+    white-space: nowrap;
+    z-index: 1;
 
-.slider .slider-content {
-    position: relative;
-    width: 100%;
-    height: 100vh;
 }
 
-.slider .slider-content img {
-    position: absolute;
-    width: 100%;
+.slideshow-container{
+    width: auto;
     height: auto;
-    object-fit: cover;
+    position: relative;
 }
+
+.dot {
+    position: relative;
+    cursor: pointer;
+    height: 139px;
+    width: 210px;
+    margin: 0 15px;
+    background-color: #bbb;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    transition: all 0.2s;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 23;
+}
+
+.dot:hover {
+    background-color: #717171;
+    transform: translateY(-20px);
+}
+
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.3s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    z-index: 20;
+}
+
+.next {
+    left: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+
 
 
 
@@ -156,7 +212,7 @@ header nav ul li a:hover {
 @media screen and (max-width:1200px) {
 
 
-    #nav{
+    #nav {
         position: fixed;
         width: 350px;
         height: 100vh;
@@ -167,7 +223,7 @@ header nav ul li a:hover {
         transition: all 0.3s ease-in-out;
     }
 
-    #nav.active{
+    #nav.active {
         transform: translateX(0);
     }
 
@@ -194,7 +250,7 @@ header nav ul li a:hover {
         cursor: pointer;
     }
 
-    #close-sidebar{
+    #close-sidebar {
         position: absolute;
         top: 39px;
         left: 60px;
@@ -205,8 +261,58 @@ header nav ul li a:hover {
         cursor: pointer;
     }
 
-    #close-sidebar:hover{
+    #close-sidebar:hover {
         opacity: 0.6;
         transition: all 0.3s;
+    }
+
+
+
+    /* slider */
+
+    .under-slider {
+        white-space: normal;
+      }
+
+
+    .under-slider {
+        display: inline-table;
+        white-space: normal;
+      }
+    
+      .under-slider {
+      margin: auto;
+    }
+
+   
+
+}
+
+
+
+
+@media screen and (max-width:800px) {
+
+    #nav {
+        width: 256px;
+    }
+
+    header nav ul {
+        right: -135px;
+    }
+
+
+    header nav ul li {
+        margin-top: 1rem;
+    }
+
+
+
+
+    /* slider */
+
+    .dot {
+        width: 105px;
+        height: 69.5px;
     }
 }
