--- a/style.css
+++ b/style.css
@@ -284,11 +284,12 @@ header nav ul li a:hover {
         position: fixed;
         width: 350px;
         height: 100vh;
-        background-color: #2b2e35ab;
+        background: rgba(0, 0, 0, 0.6);
         backdrop-filter: blur(0.6rem);
         z-index: 3;
         transform: translateX(100%);
         transition: all 0.3s ease-in-out;
+        overflow: auto;
     }
     
     #nav::-webkit-scrollbar {
@@ -386,6 +387,9 @@ header nav ul li a:hover {
 
     #nav {
         width: 256px;
+        background: rgba(0, 0, 0, 0.6);
+        backdrop-filter: blur(0.6rem);
+        overflow: auto;
     }
 
     header nav ul {
