--- a/style.css
+++ b/style.css
@@ -218,22 +218,22 @@ header nav ul li a:hover {
 
 /* new-product */
 
-.new-product{
+.new-product {
     width: 100%;
-    height: 100%; 
+    height: 100%;
     text-align: center;
 }
 
-.new-product-title{
+.new-product-title {
     margin-bottom: 50px;
 }
 
-.new-product-title h3{
+.new-product-title h3 {
     font-size: 22px;
     font-weight: bolder;
 }
 
-.new-product-content{
+.new-product-content {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -242,24 +242,25 @@ header nav ul li a:hover {
 }
 
 
-.product-box{
+.product-box {
     cursor: pointer;
     transition: all 0.5s ease-in-out;
 }
 
-.product-box:hover{
+.product-box:hover {
     transform: scale(1.05);
 }
-.product-box:hover span{
+
+.product-box:hover span {
     color: red;
-    
+
 }
 
-.product-box h2{
+.product-box h2 {
     font-weight: 500;
 }
 
-.product-box span{
+.product-box span {
     padding-top: 50px;
     transition: all 0.25s ease-in-out;
 }
@@ -291,10 +292,10 @@ header nav ul li a:hover {
         transition: all 0.3s ease-in-out;
         overflow: auto;
     }
-    
+
     #nav::-webkit-scrollbar {
         display: none;
-      }
+    }
 
     #nav.active {
         transform: translateX(0);
@@ -372,7 +373,7 @@ header nav ul li a:hover {
     /* new-product */
 
 
-    .new-product-content{
+    .new-product-content {
         justify-content: space-evenly;
     }
 
@@ -398,7 +399,7 @@ header nav ul li a:hover {
 
 
     header nav ul li {
-        margin-top: 1rem;
+        margin-top: 10px;
     }
 
 
