--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 * {
     margin: 0;
     padding: 0;
+    outline: none;
 }
 
 body {
@@ -58,7 +59,7 @@ header nav ul li {
     width: 40%;
     justify-content: flex-start;
     align-items: center;
-    
+
 }
 
 
@@ -69,7 +70,7 @@ header nav ul li a {
     padding: 10px;
     border-radius: 15px;
     transition: all 0.2s ease-in-out;
-    
+
 }
 
 
@@ -82,15 +83,21 @@ header nav ul li a:hover {
     position: absolute;
     top: 10px;
     right: 10px;
-    color: #fff;
+    color: #000;
     font-size: 30px;
     display: none;
+    /* transform: translateY(-50px); */
 }
 
 #close-sidebar {
     display: none;
 }
 
+/* header-black-background */
+
+.header-black-background {
+    display: none;
+}
 
 
 /* slider */
@@ -141,11 +148,9 @@ header nav ul li a:hover {
 .next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 47%;
     transform: translateY(-50%);
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
+    padding: 10px 20px;
     color: white;
     font-weight: bold;
     font-size: 18px;
@@ -153,12 +158,18 @@ header nav ul li a:hover {
     border-radius: 0 3px 3px 0;
     user-select: none;
     z-index: 20;
+    border-radius: 10px;
 }
 
 .next {
-    left: 0;
-    border-radius: 3px 0 0 3px;
+    left: 10px;
 }
+
+.prev {
+    right: 10px;
+}
+
+
 
 .prev:hover,
 .next:hover {
@@ -220,22 +231,28 @@ header nav ul li a:hover {
 
 /* new-product */
 
-.new-product {
+.product {
     width: 100%;
     height: 100%;
     text-align: center;
 }
 
-.new-product-title {
-    margin-bottom: 50px;
+.product-title {
+    margin-bottom: -35px;
 }
 
-.new-product-title h3 {
+.product-title h3 {
     font-size: 22px;
     font-weight: bolder;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    width: 150px;
+    margin: auto;
+    border-radius: 10px;
 }
 
-.new-product-content {
+.product-content {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -247,7 +264,15 @@ header nav ul li a:hover {
 .product-box {
     cursor: pointer;
     transition: all 0.5s ease-in-out;
+    position: relative;
+    margin-top: 5rem;
 }
+
+.product-text {
+    width: 100%;
+    position: absolute;
+}
+
 
 .product-box:hover {
     transform: scale(1.05);
@@ -263,19 +288,157 @@ header nav ul li a:hover {
 }
 
 .product-box span {
-    padding-top: 50px;
+    /* padding-top: 50px; */
     transition: all 0.25s ease-in-out;
 }
 
 
 
+/* accessories */
+
+
+#accessories {
+    max-width: 1500px;
+    display: flex;
+    margin: 10rem auto;
+}
 
 
 
 
+/* change-page */
+
+
+.change-page {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.change-page-content {
+    width: 1200px;
+    background-color: rgb(237, 238, 244);
+    height: 70px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+
+/* page-changer */
+
+
+.change-page-content .page-changer {
+    background-color: rgb(254, 74, 27);
+    border-radius: 5px;
+    width: 200px;
+    height: 45px;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    position: relative;
+    cursor: pointer;
+}
+
+
+.change-page-content .page-changer p {
+    color: #fff;
+    position: absolute;
+    left: 50px;
+    transition: all 0.3s ease-in-out;
+}
+
+.change-page-content .next-page p::after {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    color: #fff;
+    border-bottom: 3px solid white;
+    border-right: 3px solid white;
+    left: 90px;
+    top: 5px;
+    transform: rotate(-45deg);
+    transition: all 0.3s ease-in-out;
+}
+
+.change-page-content .next-page:hover p {
+    left: 40px;
+}
+
+.change-page-content .next-page:hover p::after {
+    left: 110px;
+}
+
+
+/* current-page */
+
+.current-page {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.current-page input {
+    width: 200px;
+    height: 45px;
+    border-radius: 5px;
+    border: none;
+    text-align: center;
+    font-size: 0.9rem;
+    margin: 0 15px;
+}
+
+.current-page span {
+    margin-right: 5px;
+}
 
 
 
+/* previous-page */
+
+.change-page-content .previous-page {
+    margin-left: 15px;
+}
+
+.change-page-content .previous-page p {
+    right: 50px;
+}
+
+.change-page-content .previous-page p::before {
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    color: #fff;
+    border-bottom: 3px solid white;
+    border-right: 3px solid white;
+    right: 90px;
+    top: 5px;
+    transform: rotate(135deg);
+    transition: all 0.3s ease-in-out;
+}
+
+.change-page-content .previous-page:hover p {
+    right: 40px;
+}
+
+.change-page-content .previous-page:hover p::before {
+    right: 110px;
+}
+
+.next-page-arrow{
+    display: none;
+}
+
+.previous-page-arrow{
+    display: none;
+}
 
 
 
@@ -284,7 +447,9 @@ header nav ul li a:hover {
     /* header */
 
     #nav {
-        position: fixed;
+        position: absolute;
+        top: 0;
+        right: 0;
         width: 350px;
         height: 100vh;
         background: rgba(0, 0, 0, 0.6);
@@ -324,6 +489,7 @@ header nav ul li a:hover {
     #open-sidebar {
         display: block;
         cursor: pointer;
+        color: #fff;
     }
 
     #close-sidebar {
@@ -343,10 +509,59 @@ header nav ul li a:hover {
     }
 
 
+    /* header-black-background */
+
+    .header-black-background {
+        width: 100%;
+        height: 50px;
+        background-color: #000;
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .header-black-background a {
+        width: 100px;
+        margin-right: 50%;
+        transform: translateX(50%);
+        margin-top: 10px;
+    }
+
+    .header-black-background a img {
+        width: 100px;
+    }
+
+    .black-background-icons {
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        align-items: center;
+    }
+
+    .basket-shopping {
+        color: #fff;
+        margin-right: 20px;
+        cursor: pointer;
+        font-size: 20px;
+    }
+
+    .search-icon {
+        color: #fff;
+        cursor: pointer;
+        font-size: 20px;
+        margin-top: 2px;
+    }
+
 
     /* slider */
 
     .under-slider {
+        display: none;
+    }
+
+
+    /* .under-slider {
         white-space: normal;
     }
 
@@ -358,7 +573,7 @@ header nav ul li a:hover {
 
     .under-slider {
         margin: auto;
-    }
+    } */
 
 
     /* intro-text */
@@ -372,16 +587,150 @@ header nav ul li a:hover {
 
 
 
-    /* new-product */
+    /*product */
 
+    .product-img {
+        height: 250px !important;
+        width: 250px !important;
+    }
 
-    .new-product-content {
+    .product-content {
         justify-content: space-evenly;
     }
 
 
 
+
+
+    /* change-page */
+
+    .change-page-content {
+        width: 1000px;
+    }
+
+
+    /* page-changer */
+
+
+    .change-page-content .page-changer {
+        width: 150px;
+    }
+
+
+    /* next-page */
+
+    .change-page-content .next-page p {
+        left: 25px;
+    }
+
+    .change-page-content .next-page:hover p {
+        left: 15px;
+    }
+
+    .change-page-content .next-page p::after {
+        left: 90px;
+    }
+
+
+    .change-page-content .next-page:hover p::after {
+        left: 105px;
+    }
+
+
+    /* current-page */
+
+    .current-page input {
+        width: 150px;
+    }
+
+
+
+    /* previous-page */
+
+    .change-page-content .previous-page {
+        margin-left: 15px;
+    }
+
+    .change-page-content .previous-page p {
+        right: 25px;
+    }
+
+
+    .change-page-content .previous-page:hover p {
+        right: 15px;
+    }
+
+    .change-page-content .previous-page:hover p::before {
+        right: 105px;
+    }
+
+
 }
+
+
+@media screen and (max-width:768px) {
+    /* change-page */
+
+    .change-page-content {
+        width: 568px;
+    }
+
+
+    /* page-changer */
+
+
+    .change-page-content .page-changer {
+        width: 100px;
+    }
+
+
+    /* next-page */
+
+    .change-page-content .next-page p {
+        left: 10px;
+    }
+
+    .change-page-content .next-page:hover p {
+        left: 10px;
+    }
+
+    .change-page-content .next-page p::after {
+        display: none;
+    }
+
+
+    /* current-page */
+
+    .current-page input {
+        width: 100px;
+    }
+
+
+
+    /* previous-page */
+
+    .change-page-content .previous-page {
+        margin-left: 15px;
+    }
+
+    .change-page-content .previous-page p {
+        left: 1px;
+    }
+
+
+    .change-page-content .previous-page p {
+        right: 15px;
+    }
+
+    .change-page-content .previous-page p::before {
+        display: none;
+    }
+
+
+}
+
+
+
 
 
 
@@ -430,7 +779,7 @@ header nav ul li a:hover {
     }
 
     .intro-text .intro-text-content {
-        width: 300px;
+        width: 100%;
         height: auto;
         margin: auto;
         text-align: center;
@@ -439,5 +788,76 @@ header nav ul li a:hover {
     .intro-text-content p {
         font-size: 15px;
     }
-}
 
+
+    /* product */
+
+    .product-img {
+        height: 180px !important;
+        width: 180px !important;
+    }
+
+
+    .product-content {
+        grid-gap: 20px;
+    }
+
+
+    /* change-page */
+
+    .change-page-content {
+        width: 390px;
+    }
+
+
+    /* page-changer */
+
+
+    .change-page-content .page-changer {
+        width: 50px;
+    }
+
+
+    /* next-page */
+
+    .change-page-content .next-page p {
+        display: none;
+    }
+
+
+
+    /* current-page */
+
+    .current-page input {
+        width: 75px;
+    }
+
+
+
+    /* previous-page */
+
+    .change-page-content .previous-page p {
+        display: none;
+    }
+
+
+
+
+    .next-page-arrow{
+        display: block;
+        position: absolute;
+        left: 17px;
+        color: #fff;
+    }
+    
+    .previous-page-arrow{
+        display: block;
+        position: absolute;
+        left: 17px;
+        color: #fff;
+    }
+
+
+
+
+}
