--- a/style.css
+++ b/style.css
@@ -793,9 +793,10 @@ header nav ul li a:hover {
 
     /* product */
 
-    .product-title h3 {
-        font-size: 20px
-    }
+   .product-title h3 {
+    font-size: 20px;
+    padding: 10px 15px;
+}
     
     
     .product-img {
