--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
     justify-content: center;
     position: absolute;
     z-index: 99999;
-    
+
 }
 
 .container {
@@ -68,7 +68,7 @@ header nav ul li a {
     text-decoration: none;
     color: #fff;
     font-size: 20px;
-    padding: 10px;
+    padding: 5px 10px;
     border-radius: 15px;
     transition: all 0.2s ease-in-out;
 
@@ -114,7 +114,9 @@ header nav ul li a:hover {
     margin: -80px auto 0;
     white-space: nowrap;
     z-index: 1;
-
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .slideshow-container {
@@ -346,6 +348,10 @@ header nav ul li a:hover {
     cursor: pointer;
 }
 
+.change-page-content .page-changer a {
+    margin-bottom: 25px;
+}
+
 
 .change-page-content .page-changer p {
     color: #fff;
@@ -433,13 +439,100 @@ header nav ul li a:hover {
     right: 110px;
 }
 
-.next-page-arrow{
+.next-page-arrow {
     display: none;
 }
 
-.previous-page-arrow{
+.previous-page-arrow {
     display: none;
 }
+
+
+
+/* stand */
+
+
+.stand {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 7rem;
+}
+
+
+.stand-content {
+    width: 1200px;
+    display: flex;
+    align-items: center;
+}
+
+/* .stand-content .stand-image{
+    width: 50%;
+}
+
+.stand-content .stand-image img{
+    width: 80%;
+} */
+
+
+.stand-content .stand-text {
+    padding: 0 30px;
+    line-height: 210%;
+    font-size: 1rem;
+}
+
+.stand-content .stand-text h4 {
+    font-size: 22px;
+    color: #0C0C15;
+    font-weight: bold;
+    /* margin-bottom: 50px; */
+}
+
+.stand-content .stand-text p {
+    margin: 25px 0;
+    color: #6b7c93;
+    line-height: 35px;
+}
+
+
+.stand-content .stand-text a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: 15px;
+    transition: all 0.2s ease-in-out;
+    background-color: var(--color-primary, #fe4a1b);
+}
+
+.stand-content .stand-text a:hover{
+    opacity: 0.85;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -666,7 +759,58 @@ header nav ul li a:hover {
     }
 
 
+
+    /* stand */
+
+
+    .stand-content .stand-image {
+        width: 50%;
+    }
+
+    .stand-content .stand-image img {
+        width: 100%;
+    }
+
+
+    .stand-content .stand-text {
+        width: 50%;
+        padding: 0 30px;
+        line-height: 100%;
+        font-size: 1rem;
+    }
+
+
+    .stand-content .stand-text p {
+        margin: 20px 0;
+        color: #6b7c93;
+        line-height: 30px;
+    }
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media screen and (max-width:768px) {
@@ -728,7 +872,66 @@ header nav ul li a:hover {
     }
 
 
+    /* stant */
+
+    .stand {
+        margin-top: 5rem;
+    }
+
+    .stand-content {
+        width: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .stand-content .stand-image {
+        width: 100%;
+    }
+
+    .stand-content .stand-image img {
+        width: 100%;
+    }
+
+
+    .stand-content .stand-text {
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
+    }
+
+
+    .stand-content .stand-text p {
+        margin: 20px 0;
+        color: #6b7c93;
+        line-height: 30px;
+    }
+
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -793,12 +996,12 @@ header nav ul li a:hover {
 
     /* product */
 
-   .product-title h3 {
-    font-size: 20px;
-    padding: 10px 15px;
-}
-    
-    
+
+    .product-title h3 {
+        font-size: 20px
+    }
+
+
     .product-img {
         height: 180px !important;
         width: 180px !important;
@@ -850,21 +1053,28 @@ header nav ul li a:hover {
 
 
 
-    .next-page-arrow{
-        display: block;
-        position: absolute;
-        left: 17px;
-        color: #fff;
-    }
-    
-    .previous-page-arrow{
+    .next-page-arrow {
         display: block;
         position: absolute;
         left: 17px;
         color: #fff;
     }
 
+    .previous-page-arrow {
+        display: block;
+        position: absolute;
+        left: 17px;
+        color: #fff;
+    }
 
 
+
+
+    /* stand */
+
+
+    .stand-content {
+        width: 300px;
+    }
 
 }
