--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 body {
     font-family: "Vazir" !important;
-    height: 500vh;
+    height: 1500vh;
 }
 
 
@@ -234,6 +234,10 @@ header nav ul li a:hover {
 
 /* new-product */
 
+#new-product {
+    margin-top: 1rem;
+}
+
 .product {
     width: 100%;
     height: 100%;
@@ -251,6 +255,17 @@ header nav ul li a:hover {
     background-color: #000;
     color: #fff;
     width: 150px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.product-title h4 {
+    font-size: 20px;
+    font-weight: bolder;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    width: 180px;
     margin: auto;
     border-radius: 10px;
 }
@@ -496,7 +511,7 @@ header nav ul li a:hover {
 }
 
 
-.stand-content .stand-text a{
+.stand-content .stand-text a {
     text-decoration: none;
     color: #fff;
     font-size: 20px;
@@ -506,7 +521,7 @@ header nav ul li a:hover {
     background-color: var(--color-primary, #fe4a1b);
 }
 
-.stand-content .stand-text a:hover{
+.stand-content .stand-text a:hover {
     opacity: 0.85;
 }
 
@@ -909,6 +924,11 @@ header nav ul li a:hover {
         line-height: 30px;
     }
 
+    /* stand-2 */
+
+    .stand-gift-image {
+        margin-top: 2rem;
+    }
 
 
 }
