--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ header nav ul li a:hover {
     width: 180px;
     margin: auto;
     border-radius: 10px;
+    margin-top: -50px;
 }
 
 .product-content {
