--- a/style.css
+++ b/style.css
@@ -577,14 +577,14 @@ header nav ul li a:hover {
     padding: 10px 20px;
     font-weight: bold;
     line-height: 160%;
-    height: 50px;
+    height: 65px;
     overflow: hidden;
     transition: all 0.2s ease-in-out;
 }
 
 .box-text span{
     float: right;
-    padding: 10px 20px;
+    padding: 0 20px;
     font-size: 14px;
     color: #6B7C93;
 }
@@ -632,7 +632,7 @@ header nav ul li a:hover {
     header nav a img {
         display: block;
         position: absolute;
-        top: 41px;
+        top: 13px;
         right: 10px;
         width: 150px;
     }
@@ -641,7 +641,7 @@ header nav ul li a:hover {
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 100px;
+        top: 45px;
         right: -150px;
     }
 
@@ -657,8 +657,8 @@ header nav ul li a:hover {
 
     #close-sidebar {
         position: absolute;
-        top: 39px;
-        left: 60px;
+        top: 12px;
+        left: 40px;
         z-index: 40;
         display: block;
         color: #fff;
@@ -1023,9 +1023,9 @@ header nav ul li a:hover {
     }
 
 
-    header nav ul li {
+    /* header nav ul li {
         margin-top: 10px;
-    }
+    } */
 
 
 
