--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ header nav ul li a:hover {
     padding: 10px 20px;
     font-weight: bold;
     line-height: 160%;
-    height: 65px;
+    height: 53px;
     overflow: hidden;
     transition: all 0.2s ease-in-out;
 }
@@ -867,6 +867,8 @@ header nav ul li a:hover {
         width: 100%;
         margin-top: 50px;
     }
+
+    
     
     .box-image img{
         width: 90%;
@@ -877,6 +879,10 @@ header nav ul li a:hover {
         top: 15px;
         right: 5%;
         box-shadow: none;
+    }
+
+    .box-text p{
+        height: 65px;
     }
     
 
@@ -1024,7 +1030,7 @@ header nav ul li a:hover {
 
 
     /* header nav ul li {
-        margin-top: 10px;
+        margin-top: 15px;
     } */
 
 
@@ -1150,3 +1156,6 @@ header nav ul li a:hover {
 
 
 }
+
+
+
