--- a/style.css
+++ b/style.css
@@ -751,6 +751,7 @@ header nav ul li a:hover {
         color: #fff;
         border-radius: 10px;
         font-family: "Vazir" !important;
+        outline: none;
     }
 
     
