--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header nav ul li {
     /* justify-content: space-between; */
     align-items: center;
     width: 90%;
-    /* margin-right: 50px; */
+    margin-right: 30px;
 }
 
 
