--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header nav ul li {
     /* justify-content: space-between; */
     align-items: center;
     width: 90%;
-    margin-right: 30px;
+/*     margin-right: 30px; */
 }
 
 
@@ -781,6 +781,7 @@ header nav ul li a:hover {
         width: 40%;
         justify-content: flex-start;
         align-items: center;
+        margin-right: 30px;
     }
 
     .not-display{
