--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 body {
     font-family: "Vazir" !important;
-    /* height: 100vh; */
+    /* height: 130% */
 }
 
 
@@ -61,7 +61,7 @@ header nav ul li {
     /* justify-content: space-between; */
     align-items: center;
     width: 90%;
-/*     margin-right: 30px; */
+    /* margin-right: 50px; */
 }
 
 
@@ -89,7 +89,7 @@ header nav ul li a:hover {
     transition: all 0.1s ease-in-out;
 }
 
-.search-icon:hover{
+.search-icon:hover {
     opacity: 0.8;
 }
 
@@ -102,7 +102,7 @@ header nav ul li a:hover {
     transition: all 0.1s ease-in-out;
 }
 
-.basket-shopping:hover{
+.basket-shopping:hover {
     opacity: 0.8;
 }
 
@@ -124,13 +124,13 @@ header nav ul li a:hover {
     z-index: -1000;
 }
 
-.open-search1.active{
+.open-search1.active {
     opacity: 1;
     z-index: 9999999;
 }
 
 
-.open-search1 input{
+.open-search1 input {
     background-color: #fff;
     width: 90%;
     height: 50px;
@@ -161,16 +161,16 @@ header nav ul li a:hover {
     cursor: not-allowed;
 }
 
-.open-search1 .btn.active{
+.open-search1 .btn.active {
     cursor: pointer;
     color: #fff;
 }
 
-.open-search1 .btn.active:hover{
+.open-search1 .btn.active:hover {
     opacity: 0.8;
 }
 
-#close-search{
+#close-search {
     color: #000;
     cursor: pointer;
     font-size: 20px;
@@ -387,15 +387,73 @@ header nav ul li a:hover {
     margin-top: 5rem;
 }
 
+
+.product-img {
+    width: 300px;
+    height: 300px;
+    opacity: 1;
+    transition: all 0.3s;
+}
+
+.product-img2 {
+    visibility: hidden;
+    display: none;
+    width: 300px;
+    height: 300px;
+}
+
 .product-text {
     width: 100%;
     position: absolute;
 }
 
 
-.product-box:hover {
+/* .product-box:hover {
     transform: scale(1.05);
+} */
+
+.product-box:hover .product-img2 {
+    display: flex;
+    visibility: visible;
+    margin-bottom: 9px;
+    -webkit-animation: fadein 0.3s;
+    animation: fadein 0.3s;
+    width: 300px;
+    height: 300px;
+    transform: scale(1);
 }
+
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0.3;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0.3;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.product-box:hover .product-img {
+    /* display: none; */
+    /* visibility: hidden; */
+    /* opacity: 0; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
 
 .product-box:hover span {
     color: red;
@@ -421,6 +479,7 @@ header nav ul li a:hover {
     display: flex;
     margin: 10rem auto;
 }
+
 
 
 
@@ -698,16 +757,203 @@ header nav ul li a:hover {
 
 
 
+/* socials */
+
+#socials{
+    margin-top: -100px;
+}
+
+
+.socials {
+    width: 100%;
+    height: 100%;
+    background: rgb(246, 246, 246);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.socials .socials-titel {
+    margin: 50px 0;
+}
+
+.socials .socials-titel a {
+    text-decoration: none;
+    padding: 10px 40px;
+    background-color: #fff;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #000;
+    transition: all 0.3s ease-in-out;
+}
+
+.socials .socials-titel a:hover{
+    color: #fe4a1b;
+}
+
+.socials-content {
+    max-width: 1250px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding-bottom: 50px;
+}
+
+
+.socials-content-images{
+    width: 20%;
+}
+
+.socials-content-images.img1{
+    width: 40%;
+}
+
+.social-image {
+    width: 100%;
+    height: 50%;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.social-image.image-1 {
+    width: 100%;
+    height: 100%;
+}
+
+.social-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.3s ease-out;
+}
+
+
+.social-image:hover img {
+    transform: scale(1.1);
+}
+
+
+
+/* fotter */
+
+.fotter{
+    width: 100%;
+    height: 100%;
+    margin-top: 7rem;
+    background-color: #000;
+    padding-bottom: 50px;
+}
+
+.fotter-nav{
+    width: 100%;
+    height: 60px;
+    background: #171723;
+    display: flex;
+    justify-content: center;
+}
+
+.fotter-nav ul{
+    display: flex;
+    padding: 20px;
+    width: 50%;
+    justify-content: center;
+}
+
+.fotter-nav ul li{
+    display: flex;
+    justify-content: center;
+    width: 30%;
+}
+
+
+.fotter-nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+
+.fotter-nav ul li a:hover{
+    color: #fe4a1b;
+}
 
 
 
 
 
 
+.fotter-end{
+    /* display: flex;
+    justify-content: center; */
+    margin-top: 3rem;
+}
+
+.fotter-socials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fotter-socials-icon a{
+    margin-right: 25px;
+}
 
 
 
 
+.fotter-socials-icon a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    transition: all 0.2s ease-in-out;
+}
+
+.fotter-socials-icon a:hover{
+    color: #fe4a1b;
+}
+
+.fotter-socials-number{
+    margin-right: 70px;
+    cursor: pointer;
+}
+
+.fotter-socials-number a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    transition: all 0.2s ease-in-out;
+}
+
+.fotter-socials-number a:hover{
+    color: #fe4a1b;
+}
+
+
+.fotter-copy{
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    /* flex-direction: column; */
+}
+
+.fotter-copy span{
+    color: #fff;
+}
+
+.fotter-copy span:nth-child(1){
+    color: #fff;
+}
+
+.fotter-copy span:nth-child(2){
+    margin: 0 20px;
+    color: #fff;
+}
+.fotter-copy span:nth-child(3) a{
+    color: #fe4a1b;
+    text-decoration: none;
+    margin-right: 5px;
+    margin-top: 20px;
+}
 
 
 
@@ -784,7 +1030,7 @@ header nav ul li a:hover {
         margin-right: 30px;
     }
 
-    .not-display{
+    .not-display {
         display: none;
     }
 
@@ -877,8 +1123,8 @@ header nav ul li a:hover {
         z-index: 1080;
     }
 
-    
-    .open-search input{
+
+    .open-search input {
         background-color: #0C0C15;
         width: 90%;
         height: 60px;
@@ -892,7 +1138,7 @@ header nav ul li a:hover {
         overflow: auto;
     }
 
-    
+
 
     .open-search .btn {
         padding: 20px 15px;
@@ -903,19 +1149,19 @@ header nav ul li a:hover {
         justify-content: center;
         margin-left: 20px;
         border-radius: 5px;
-        background-color:#fff;
+        background-color: #fff;
         font-family: "Vazir" !important;
         border: none;
         font-size: 17px;
         cursor: not-allowed;
     }
 
-    .open-search .btn.active{
+    .open-search .btn.active {
         cursor: pointer;
         color: #fff;
     }
 
-    .open-search .btn.active:hover{
+    .open-search .btn.active:hover {
         opacity: 0.8;
     }
 
@@ -923,7 +1169,7 @@ header nav ul li a:hover {
 
 
 
-    #close-search{
+    #close-search {
         color: #fff;
         cursor: pointer;
         font-size: 20px;
@@ -931,12 +1177,12 @@ header nav ul li a:hover {
     }
 
 
-    .open-search.active{
-       transform: translateX(1%);
-       opacity: 1;
+    .open-search.active {
+        transform: translateX(1%);
+        opacity: 1;
     }
 
-    
+
 
 
 
@@ -976,6 +1222,11 @@ header nav ul li a:hover {
     /*product */
 
     .product-img {
+        height: 250px !important;
+        width: 250px !important;
+    }
+
+    .product-img2 {
         height: 250px !important;
         width: 250px !important;
     }
@@ -1109,6 +1360,78 @@ header nav ul li a:hover {
     }
 
 
+    /* socials */
+
+    .socials-content {
+        margin: 0;
+    }
+
+
+
+
+    /* footer */
+
+
+    .fotter{
+        margin-top: 4rem;
+    }
+    
+    .fotter-nav{
+        height: auto;
+    }
+    
+    .fotter-nav ul{
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+    
+    .fotter-nav ul li{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+
+
+    .fotter-end{
+        margin-top: 2rem;
+    }
+
+    
+    .fotter-socials{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .fotter-socials-icon{
+        margin-bottom: 20px;
+    }
+
+    .fotter-socials-icon a:nth-child(1){
+        margin-right: 0px;
+    }
+
+
+    .fotter-socials-number{
+        margin-right: 0px;
+    }
+
+
+    .fotter-copy{
+        flex-direction: column;
+    }
+
+
+
+    .fotter-copy span:nth-child(3){
+        margin-top: 15px;
+    }
 
 }
 
@@ -1265,7 +1588,32 @@ header nav ul li a:hover {
 
 
 
+    /* socials */
 
+    
+    .social-image {
+        overflow: hidden;
+    }
+    
+    
+    .socials-content {
+        display: block;
+    }
+    
+    
+    .socials-content-images{
+        width: 65%;
+        margin: auto;
+    }
+    
+    .socials-content-images.img1{
+        width: 65%;
+    }
+
+    .social-image:hover img {
+        transform: scale(1.030);
+    }
+    
 }
 
 
@@ -1378,6 +1726,11 @@ header nav ul li a:hover {
         width: 180px !important;
     }
 
+    .product-img2 {
+        height: 180px !important;
+        width: 180px !important;
+    }
+
 
     .product-content {
         grid-gap: 20px;
@@ -1455,8 +1808,21 @@ header nav ul li a:hover {
     }
 
 
-    .open-search input{
+    .open-search input {
         font-size: 15px;
+    }
+
+
+    /* socials */
+
+
+    .socials-content-images{
+        width: 90%;
+        margin: auto;
+    }
+    
+    .socials-content-images.img1{
+        width: 90%;
     }
 
 }
