--- a/style.css
+++ b/style.css
@@ -379,10 +379,13 @@ header nav ul li a:hover {
     flex-wrap: wrap;
 }
 
+.product-content a{
+    color: #000;
+}
+
 
 .product-box {
     cursor: pointer;
-    transition: all 0.5s ease-in-out;
     position: relative;
     margin-top: 5rem;
 }
@@ -411,6 +414,18 @@ header nav ul li a:hover {
 /* .product-box:hover {
     transform: scale(1.05);
 } */
+
+.product-box:hover .product-img {
+    /* display: none; */
+    /* visibility: hidden; */
+    /* opacity: 0; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
 
 .product-box:hover .product-img2 {
     display: flex;
@@ -443,16 +458,7 @@ header nav ul li a:hover {
     }
 }
 
-.product-box:hover .product-img {
-    /* display: none; */
-    /* visibility: hidden; */
-    /* opacity: 0; */
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-}
+
 
 
 .product-box:hover span {
