--- a/style.css
+++ b/style.css
@@ -345,7 +345,7 @@ header nav ul li a:hover {
 }
 
 .product-title {
-    margin-bottom: -35px;
+    margin-bottom: 0;
 }
 
 .product-title h3 {
@@ -390,13 +390,31 @@ header nav ul li a:hover {
     margin-top: 5rem;
 }
 
+.all-images{
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+}
+
 
 .product-img {
     width: 300px;
     height: 300px;
-    opacity: 1;
-    transition: all 0.3s;
+    /* opacity: 1; */
+    animation: ez 0.5s ease;
 }
+
+@keyframes ez{
+    0%{
+        /* opacity: 0.6;     */
+        transform: scale(1.05);
+    }
+    100%{
+        opacity: 1;
+        /* transform: scale(1); */
+    }
+}
+
 
 .product-img2 {
     visibility: hidden;
@@ -424,39 +442,39 @@ header nav ul li a:hover {
     right: 0;
     left: 0;
     bottom: 0;
+    animation: fadeout 0.5s ease;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeout{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
 }
 
 
-.product-box:hover .product-img2 {
+.product-box:hover .product-img2{
     display: flex;
     visibility: visible;
     margin-bottom: 9px;
-    -webkit-animation: fadein 0.4s;
-    animation: fadein 0.4s;
-    width: 300px;
-    height: 299px;
-    transform: scale(1);
+    animation: fadein 0.5s ease;
+    animation-fill-mode: forwards;
 }
 
-@-webkit-keyframes fadein {
-    from {
-        opacity: 0.3;
+@keyframes fadein{
+    0%{
+        opacity: 0;
+        transform: scale(1);
     }
-
-    to {
+    100%{
         opacity: 1;
+        transform: scale(1.05);
     }
 }
 
-@keyframes fadein {
-    from {
-        opacity: 0.3;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
 
 
 
